service.yml
apiVersion: v1
kind: Service
metadata:
  name: intro-service
spec:
  selector:
    app: intro
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: LoadBalancer
