ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-for-nginx
spec:
  rules:
  - host: darshil.com
    http:
      paths:
      - path: /testing
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
